--- a/kitty.conf
+++ b/kitty.conf
@@ -1,2 +1,30 @@
-ynamic_background_opacity yes
-background_opacity 0.8
+# Enable dynamic background opacity
+dynamic_background_opacity yes
+
+# Set background opacity (slightly transparent)
+background_opacity 0.9
+
+# Set background color to a blueish tone (valid hex color)
+background #03142A  
+
+# Set font to FiraCode Nerd Font (adjust as needed)
+font_family FiraCode Nerd Font
+
+# Font size (must be a float value)
+font_size 14.0  
+
+# Set text color (light color for visibility on a dark background)
+foreground #D1D7E0  
+
+# Set cursor color to a contrasting soft color
+cursor #A9B4D7  
+
+# Set scrollback buffer size (optional, depending on how much history you want)
+scrollback_lines 10000
+
+# Enable smooth scrolling
+scrollback_smooth yes
+
+# Disable border around the terminal (optional)
+border_width 0
+
